# Operating-systems

./: .gitignore  README.md
Lab3 Cmake C++17/: CMakeLists.txt  CMakePresets.json  README.md
Lab3 Cmake C++17/include/: constants.hpp  marker.hpp  print_utils.hpp  shared_array.hpp
Lab3 Cmake C++17/src/: Main.cpp  marker.cpp
Lab3 Cmake C++17/tests/: test_array.cpp  test_marker.cpp  test_sync.cpp
Lab4/: CMakeLists.txt  README.md
Lab4/headers/: QueueCommon.h  QueueFile.h
Lab4/src/: QueueFile.cpp  Receiver.cpp  Sender.cpp
Lab4/tests/: QueueFileTests.cpp
